# AI-Orchestrator

./: .gitignore  .mcp.json.example  README.md  pyproject.toml  requirements.txt  run_task.sh  tasks_example.json
orchestrator/: __init__.py  cli.py  executor.py  mcp_server.py  planner.py  router.py  validator.py
orchestrator/agents/: __init__.py  base_agent.py  claude_agent.py  copilot_agent.py
orchestrator/utils/: __init__.py  logger.py  materializer.py  state.py  task_graph.py
tests/: test_executor.py  test_planner.py  test_router.py  test_task_graph.py
